<resources>
    <string name="app_name">Login</string>
    <string name="txt_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone number</string>
    <string name="txt_forgot_pass">Forgot password?</string>
    <string name="txt_no_account">Don\'t have an account ?</string>
    <string name="txt_register">Register</string>
    <string name="API_KEY">AIzaSyDbfp1-kdXNQyriUunWDehPZM4VstC610U</string>

    <string name="open_navigation_drawer">Open Drawer</string>
    <string name="close_navigation_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>