<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@drawable/bg_top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="40dp"
                android:text="@string/txt_login"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </FrameLayout>

        <EditText
            android:autofillHints="Email"
            android:inputType="textEmailAddress"
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/bg_radius"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/hint_email"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:autofillHints="Password"
            android:inputType="textPassword"
            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/bg_radius"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/log_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/txt_forgot_pass"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/log_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_login"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/txt_login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/txt_no_account"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/log_register"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/txt_register"
                android:textColor="@color/teal_700"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminateTint="@color/orange"
        android:visibility="gone" />
</RelativeLayout>