<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".RegisterApp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@drawable/bg_top" />

            <ImageView
                android:id="@+id/reg_back"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="40dp"
                android:text="@string/txt_register"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </FrameLayout>

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="3dp"
            android:autofillHints="Name"
            android:background="@drawable/bg_radius"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/reg_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="3dp"
            android:autofillHints="phone"
            android:background="@drawable/bg_radius"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:hint="@string/hint_phone"
            android:inputType="textPhonetic"
            android:padding="10dp"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="3dp"
            android:autofillHints="Email"
            android:background="@drawable/bg_radius"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/reg_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="3dp"
            android:autofillHints="Password"
            android:background="@drawable/bg_radius"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ok_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/bg_login"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/txt_register"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? "
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/reg_login_ima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login in now"
                android:textColor="@color/teal_700"
                android:textSize="15sp" />
        </TableRow>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminateTint="@color/orange"
        android:visibility="gone" />

</RelativeLayout>